# pointer_io_rssfeed

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  probe_pointer_cloudflare.yaml  publish.yaml  update_rss.yaml  zizmor.yaml
src/pointer_io_rssfeed/: __init__.py  archive.py  blocks.py  cleanup.py  cli.py  fetch.py  render.py  rss.py  rules.py  sanitize.py
tests/: test_archive.py  test_cleanup.py  test_cli.py  test_fetch.py  test_output.py
tests/__snapshots__/: test_cleanup.ambr
tests/fixtures/: 01b4cdda41.html  ee9c973edf.html  post_37528c1f-7f9d-43b2-aff4-989d860adb3f.html  post_aa76678f-b955-4a29-927e-388a5e3410d4.html
