[project]
name = "pointer-io-rssfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cal Jacobson", email = "cj81499@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=24.3.0",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "trio>=0.28.0",
]

[project.scripts]
pointer-io-rssfeed = "pointer_io_rssfeed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
    "types-beautifulsoup4>=4.12.0.20241020",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812", # conflicts w/ formatter
    "S101",   # defensive assert is good!
]
