[project]
name = "pointer-io-rssfeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "Cal Jacobson", email = "cj81499@users.noreply.github.com" },
]
dependencies = [
  "attrs",
  "beautifulsoup4",
  "click",
  "httpx",
  "trio",
]

[project.scripts]
pointer-io-rssfeed = "pointer_io_rssfeed:main"

[dependency-groups]
dev = [
  "mypy",
  "ruff",
  "types-beautifulsoup4",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "COM812",  # conflicts w/ formatter
  "S101",  # defensive assert is good!
  # Allow TODO comments
  "FIX002",
  "TD002",
  "TD003",
]
